# news-trading-ideas

./: .env.example  .gitignore  Dockerfile  EXECUTIVE-SUMMARY.md  GPT5-MIGRATION-COMPLETE.md  MVP-COMPLETE.md  QUICK-START.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf
architecture/: MASTER-RSS-FEED-LIST.md  PRIORITY-FEEDS-FOR-MVP.md  README.md  RSS-FEED-STATISTICS-SUMMARY.md  RSS-INTEGRATION-GUIDE.md  ai-integration-design.md  business-news-rss-complete.md  database-design.md  database-schema.sql  implementation-checklist.md  ingestion-system-design.md  integration-guide.md  mvp-plan.md  news-sources-research.md  project-structure.md  rss-discovery-group1.md  rss-discovery-group2.md  rss-discovery-group3.md  rss-discovery-group4.md  rss-verification-financial.md  rss-verification-politics.md  system-architecture.md  top-100-news-sites-list.md  ui-design.md
backend/: config.py  database.py  (+3 more)
src/backend/: .env.example  QUICK_START.md  README.md  pyproject.toml
src/backend/app/: __init__.py  config.py  database.py  main.py
src/backend/app/api/v1/: articles.py  events.py  feeds.py  ideas.py
src/backend/app/core/: __init__.py  openai_client.py
src/backend/app/models/: __init__.py  article.py  event.py  feed.py  trading_idea.py
src/backend/app/schemas/: article.py  event.py  feed.py  idea.py
src/backend/app/services/: clustering.py  idea_generation.py  rss_ingestion.py
src/backend/app/workers/: scheduler.py
src/backend/scripts/: seed_feeds.py
src/backend/tests/: conftest.py  test_clustering.py  test_feeds.py
(+83 files in other folders)
